--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.17.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.471.1",
@@ -24,9 +26,11 @@
     "react-icons": "^5.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
+    "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
