--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "sweetalert2": "^11.15.10",
