--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
@@ -28,6 +29,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
+    "react-sidebar": "^3.0.2",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
