--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.64.1",
     "@tiptap/core": "^2.11.2",
+    "@tiptap/extension-bold": "^2.11.2",
+    "@tiptap/extension-heading": "^2.11.2",
+    "@tiptap/extension-image": "^2.11.2",
+    "@tiptap/extension-italic": "^2.11.2",
+    "@tiptap/extension-link": "^2.11.2",
+    "@tiptap/extension-underline": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
     "axios": "^1.7.9",
@@ -30,10 +37,12 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-modal": "^3.16.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "react-sidebar": "^3.0.2",
+    "react-table": "^7.8.0",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
