dark-theme-toggoling-added

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.5.0",
-    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query": "^5.64.2",
     "@tiptap/core": "^2.11.2",
     "@tiptap/extension-bold": "^2.11.2",
     "@tiptap/extension-heading": "^2.11.2",
@@ -38,6 +38,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
     "react-responsive-carousel": "^3.2.23",
