--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-loading-skeleton": "^3.5.0",
